assets/styles.css
body {
  cursor: url('../images/cursor.png'), auto;
}

.cinzel  {
  font-family: "Cinzel", serif;
  font-optical-sizing: auto;
  font-style: normal;
}
.red-hat-display{
  font-family: "Red Hat Display", serif;
  font-optical-sizing: auto;
  font-style: normal;
}


:root {
  --big-size: 2em;
  --spacing: 1.5em;
  --base-size: 12px;
  --gutter: calc(3 * var(--base-size)); 
  --color--primary: black; 
  --color--secondary: rgb(138, 216, 22);
  --color--tertiary: rgb(42, 3, 3);
  --color--quartery: white;

  --color--green-1: #6B9A6F;     
  --color--green-2:#88B888;    
  --color--green-3: #237623;
  --color--green-4: #042604;
  
  --color--blue: rgb(68, 122, 238);
  --color-dark-blue: rgb(8, 39, 107);
  --color--blue-light: rgb(103, 144, 232);
  
  ;       
  

  --title-size: 4.2em;
  --subheading-size: 25px;
  --subheading-size2: 20px;
  --body-size: 18px;

  --spacing-size: 20px;
  --spacing-size-body:30px;
  --nav-size: 1.2em;
}
 
/*https://codepen.io/MarioDesigns/pen/woJgeo*
/* https://stackoverflow.com/questions/70631090/keyframe-animation-is-not-working-on-the-right-margin-but-works-perfect-on-the-l*/
/* originally tried to do @keyframes floatanimation with transform and translate, but it was messing up the javascript function i built to randomize the blocks 
the first link taught me about how you make an element animate, which was helpful, but since It was conflciting with my javascript, I took it out. I then decided to look for other ways to implement the animation without transform and ttranslate and i found this second link. it taught me that you can use margin-top to create an animation by giving it different poitns from 0-100 to rotate through. this was applicible for my design as i wanted to emulate 
the shape and movement of a lilypad, and sicne I could not use transform / translate, margin-top was the best option to make my animatio nand my randomizer work*/ 

@keyframes floatAnimation {
  0% {
    margin-top: 0px;
  }
  50% {
    margin-top: 3px;
  }
  100% {
    margin-top: 0px;
  }
} 

@keyframes floatAnimation1 {
  0% {
    margin-top: 0px;
  }
  50% {
    margin-top: 6px;
  }
  100% {
    margin-top: 0px;
  }
}

@keyframes floatAnimation2 {
  0% {
    margin-top: 0px;
  }
  25% {
    margin-top: 1px;
  }
  75% {
    margin-top: 0px;
  }
}

@keyframes floatAnimation3 {
  0% {
    margin-top: 0px;
  }
  25% {
    margin-top: 4px;
  }
  75% {
    margin-top: 0px;
  }
}

.arrow {
  font-size: 70px ;
  padding: 1em;
  color: var(--color--green-4);
}

 p{
  padding-inline: var(--spacing);
  padding-block: calc(var(--base-size));
} 

.monet-cred {
  padding: 1em;
  font-style: italic;
  bottom: 0;
  right: 0;
  text-align: right; 
  position: absolute;
  font-weight: bold;
  font-family: "Red Hat Display", serif;
}



.nav-text {
  display: flex;
  flex-direction: column;  
  justify-content: center;
  align-items: center;   
  font-family: cinzel; 
}

.nav-text a{
  color : var(--color--green-3);
  font-size: var(--nav-size);
  font-family: cinzel;
}

.nav-text a:hover {
  color: var(--color--green-4);
  text-shadow:2px 1px 1px rgb(6, 65, 30);
  font-family: cinzel;
}

/* .button {
  background-color: var(--color--green-2);
  padding: 20px;
  border-radius: 50%;
  width: 80px;  
  height: 80px; 
  align-items: center;
  text-align: center;
} */

#index-button {
  color: black;
  background-color: aliceblue;
}

.top {
  position: relative;
  background-color: var(--color--green-1); 
  padding: var(--spacing-size);
}

.description-text 
{text-align: center;
padding: 0.5em;}

.middle {
height: 30%;
 background-image: url('../images/default.jpg');
 border: var(--color--tertiary) 10px solid;
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 position: relative;
}

.quote {
  height: 12%;
  background-color: var(--color--green-1);
}

.quote p {
font-family: cinzel;
font-size: 1.1em;
color: var(--color--green-4);
text-align: center;
justify-content: center;

}

.bottom {
  background-color: var(--color--blue);
  padding-bottom: 10em;
  padding-left: 4em;
  padding-right: 4em;
}


.full {
  background-image: url(../images/default.jpg); 
}

body {
  font-size: var(--body-size);
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  color: var(--color--primary);
  overflow-x: hidden;
  height: 100%;
}



h1 {
 padding-top: var(--spacing-size);
  font-size: var(--title-size);
  color: var(--color--quartery);
  text-align: center;
  font-family: "Cinzel", serif;
}

h2 {
  padding-left: var(--spacing-size-body);
  padding-right: var(--spacing-size-body);
  font-size: var(--subheading-size);
  color: var(--color--quartery);
  text-align: center;
  font-family: "Red Hat Display", serif;

}

h3 {
  padding: var(--spacing-size-body);
  font-size: var(--subheading-size2);
  color: var(--color--quartery);
  text-align: center;
  font-family: "Red Hat Display", serif;

}

p, a{
  color: var(--color--green-5);
  font-family: "Red Hat Display", serif;
  font-size: 1.0em;
}


.count {
  text-align: center;
  color:white;
  font-family: cinzel;
}
 #channel-blocks {
  display: grid;
  grid-template-columns: repeat(2, 1fr); 
  gap: 20px; 
  justify-content: center;
  position: relative;
} 


#channel-blocks li {
  width: 95px;
  height: 95px;
  border-radius: 50%;
  background-color: var(--color--green-3);
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  /* animation: floatAnimation 5s ease-in-out infinite; */
}

 #channel-blocks li:nth-child(4n) {
  animation: floatAnimation 5s ease-in-out infinite;
  animation-delay: 0.6s;
} 

#channel-blocks li:nth-child(9n) {
  animation: floatAnimation1 6s ease-out infinite;
  animation-delay: 1s;
}

#channel-blocks li:nth-child(7n) {
  animation: floatAnimation2 4s linear infinite;
  animation-delay: 2s;
}

#channel-blocks li:nth-child(11n) {
  animation: floatAnimation2 8s cubic-bezier(0.18, -0.75, 0.20, 0.55) infinite;
  animation-delay: 4s;
}
/* ... */

